--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="Cylinder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Transparency.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -104,6 +107,9 @@
     <ClCompile Include="Cylinder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Transparency.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Assets\Shaders\beast_shader.fs.txt" />
@@ -126,6 +132,12 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Assets\Shaders\basic_texture.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="TransparencyShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="TransparencyShader.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
